# Goodmorningtoyou

./: .gitignore  README.md  app.py  docker-compose.yaml  pyproject.toml
config/: __init__.py
src/: __init__.py  utils.py
src/Getter/: GetterInterface.py  NewsAPIGetter.py  OnthisdayAPIGetter.py  __init__.py
src/Parser/: Parser.py
src/PostgreSQL/: defineObjects.sql
static/css/: main.css
templates/: home.html  news.html  onthisday.html
